# ChangeLog for net-analyzer/barnyard
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/barnyard/ChangeLog,v 1.2 2004/03/15 22:47:22 mboman Exp $

  16 Mar 2004; Michael Boman <mboman@gentoo.org> barnyard-0.1.0.ebuild:
  Marked 0.1.0 stable on x86

*barnyard-0.1.0 (09 Aug 2003)

  09 Aug 2003; <solar@gentoo.org> barnyard-0.1.0.ebuild, metadata.xml,
  files/barnyard.confd, files/barnyard.rc6:
  Initial import of barnyard to portage
