@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/honeyd/Attic/honeyd-0.4a.ebuild,v 1.4 2004/03/13 11:25:54 mboman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/honeyd/Attic/honeyd-0.4a.ebuild,v 1.5 2004/03/21 12:09:10 mboman Exp $
 
 DESCRIPTION="Honeyd is a small daemon that creates virtual hosts on a network"
 HOMEPAGE="http://www.citi.umich.edu/u/provos/honeyd/"
@@ -14,8 +14,6 @@ IUSE=""
 DEPEND=">=libdnet-1.4
 	>=libevent-0.6
 	>=libpcap-0.7.1"
-
-S="${WORKDIR}/${P}"
 
 src_compile() {
 	./configure \
