@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/honeyd
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/honeyd/Attic/ChangeLog,v 1.8 2004/03/13 11:25:54 mboman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/honeyd/Attic/ChangeLog,v 1.9 2004/03/21 12:09:10 mboman Exp $
+
+  21 Mar 2004; Michael Boman <mboman@gentoo.org> honeyd-0.4a.ebuild,
+  honeyd-0.5.ebuild, honeyd-0.6a.ebuild, honeyd-0.7a.ebuild,
+  honeyd-0.8.ebuild:
+  QA: Unnecessary definition of S removed.
 
   13 Mar 2004; Michael Boman <mboman@gentoo.org> honeyd-0.4a.ebuild,
   honeyd-0.5.ebuild, honeyd-0.6a.ebuild, honeyd-0.7a.ebuild,
