@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/barnyard
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/barnyard/ChangeLog,v 1.2 2004/03/15 22:47:22 mboman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/barnyard/ChangeLog,v 1.3 2004/03/21 12:05:57 mboman Exp $
+
+  21 Mar 2004; Michael Boman <mboman@gentoo.org> barnyard-0.1.0.ebuild:
+  QA: Unnecessary definition of S removed.
 
   16 Mar 2004; Michael Boman <mboman@gentoo.org> barnyard-0.1.0.ebuild:
   Marked 0.1.0 stable on x86
